# river.cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  get_data.sh  main  main.cpp  makefile
.github/workflow/: ci.yml
.github/workflows/: ci.yml
data/: phishing.csv  trump_approval.csv
evaluate/: Makefile  covtype.cpp  covtype.py  test.py  trump_approval.cpp  trump_approval.py
example/: Makefile  ex_phishing.cpp  ex_phising.cpp
include/: ARFClassifier.h  Classifier.h  GaussianSplitter.h  HeatPredictor.h  HoeffdingTree.h  HoeffdingTree.tpp  HoeffdingTreeClassifier.h  Metrics.h  PipelineClassifier.h  StandardScaler.h  Transformer.h  TreeBase.h  TreeBase.tpp  utils.h
include/drift/: ADWIN.h  DDM.h  DetectorConcept.h  HDDM_W.h  PageHinckley.h
include/rivercpp/: AMRules.h  ARFClassifier.h  Branch.h  Classifier.h  GaussianSplitter.h  HeatPredictor.h  HoeffdingTree.h  HoeffdingTree.tpp  HoeffdingTreeClassifier.h  HotList.h  LinReg.h  Loss.h  Metrics.h  PA.h  PipelineClassifier.h  PipelineRegressor.h  QOSplitter.h  Regressor.h  StandardScaler.h  Transformer.h  TreeBase.h  TreeBase.tpp  utils.h
include/rivercpp/drift/: ADWIN.h  DDM.h  DetectorConcept.h  HDDM_W.h  PageHinckley.h  stats.h
include/rivercpp/io/: CSVReader.h
